style: 优化import和代码格式